# wrf_hydro_nwm_jedi

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md
CI/: .gitignore  CMakeLists.txt  Dockerfile  buildspec_clang.yml  log_repo_hashes.sh
CI/cmake/: CTestConfig.cmake
bundle/: .gitignore  CMakeLists.txt  log_repo_hashes.sh
doxygen/: CMakeLists.txt  Doxyfile.in
preprocess/: README.md  geometry_preprocess.py
src/: CMakeLists.txt
src/mains/: CMakeLists.txt  Dirac.cc  ErrorCovarianceTraining.cc  EstimateParams.cc  Forecast.cc  HofX.cc  HofX3D.cc  HofX3Dslow.cc  HofXNoModel.cc  LETKF.cc  MakeObs.cc  StaticBInit.cc  Var.cc
src/wrf_hydro_nwm-jedi/: CMakeLists.txt  Traits.h
src/wrf_hydro_nwm-jedi/Covariance/: Covariance.h
src/wrf_hydro_nwm-jedi/Geometry/: Geometry.F90  Geometry.cc  Geometry.h  Geometry.interface.F90  GeometryFortran.h
src/wrf_hydro_nwm-jedi/Model/: Model.h
src/wrf_hydro_nwm-jedi/ModelAux/: ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/wrf_hydro_nwm-jedi/State/: State.h
src/wrf_hydro_nwm_jedi/: CMakeLists.txt  Traits.h
src/wrf_hydro_nwm_jedi/Covariance/: Covariance.F90  Covariance.cc  Covariance.h  Covariance.interface.F90  CovarianceFortran.h
src/wrf_hydro_nwm_jedi/Fields/: Fields.F90  Fields.cc  Fields.h
src/wrf_hydro_nwm_jedi/Geometry/: Geometry.F90  Geometry.cc  Geometry.h  Geometry.interface.F90  GeometryFortran.h
src/wrf_hydro_nwm_jedi/GeometryIterator/: GeometryIterator.F90  GeometryIterator.cc  GeometryIterator.h  GeometryIterator.interface.F90  GeometryIteratorFortran.h
src/wrf_hydro_nwm_jedi/GetValues/: GetValues.F90  GetValues.cc  GetValues.h  GetValues.interface.F90  GetValues.interface.h  LinearGetValues.cc  LinearGetValues.h  LinearGetValues.interface.F90  LinearGetValues.interface.h
src/wrf_hydro_nwm_jedi/GetValuesTraj/: GetValuesTraj.cc  GetValuesTraj.h
src/wrf_hydro_nwm_jedi/Increment/: Increment.F90  Increment.cc  Increment.h  Increment.interface.F90  IncrementFortran.h  Increment_utils.F90
src/wrf_hydro_nwm_jedi/LinearGetValues/: LinearGetValues.cc  LinearGetValues.h
src/wrf_hydro_nwm_jedi/LinearModel/: TlmId.cc  TlmId.h
src/wrf_hydro_nwm_jedi/LinearVariableChange/: LinearVariableChange.cc  LinearVariableChange.h
src/wrf_hydro_nwm_jedi/LinearVariableChange/Base/: LinearVariableChangeBase.cc  LinearVariableChangeBase.h
src/wrf_hydro_nwm_jedi/LinearVariableChange/Model2GeoVaLs/: LinVarChaModel2GeoVaLs.F90  LinVarChaModel2GeoVaLs.cc  LinVarChaModel2GeoVaLs.h  LinVarChaModel2GeoVaLsFortran.h  LinVarChaModel2GeovaLs.F90  LinVarChaModel2GeovaLs.interface.F90
src/wrf_hydro_nwm_jedi/Model/: Model.cc  Model.h
src/wrf_hydro_nwm_jedi/ModelAux/: ModelAuxControl.cc  ModelAuxControl.h  ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/wrf_hydro_nwm_jedi/ModelBias/: ModelBias.h  ModelBiasCovariance.h  ModelBiasIncrement.h
src/wrf_hydro_nwm_jedi/ObsLocalization/: ObsLocVerticalBrasnett.h  instantiateObsLocFactory.h
src/wrf_hydro_nwm_jedi/State/: State.F90  State.cc  State.h  State.inferface.F90  State.interface.F90  StateFortran.h  State_utils.F90
src/wrf_hydro_nwm_jedi/Utilities/: constants.F90  interface.h  utilities.F90
src/wrf_hydro_nwm_jedi/VariableChange/: VariableChange.cc  VariableChange.h
src/wrf_hydro_nwm_jedi/VariableChange/Base/: VariableChangeBase.cc  VariableChangeBase.h
src/wrf_hydro_nwm_jedi/VariableChange/Model2GeoVaLs/: VarChaModel2GeoVaLs.cc  VarChaModel2GeoVaLs.h  VarChaModel2GeoVaLsFortran.h
src/wrf_hydro_nwm_jedi/VariableChanges/: VarChaModel2GeoVaLs.F90  instantiateVarChangeFactories.h
src/wrf_hydro_nwm_jedi/VariableChanges/Model2GeoVaLs/: LinVarChaModel2GeoVaLs.cc  LinVarChaModel2GeoVaLs.h  VarChaModel2GeoVaLs.F90  VarChaModel2GeoVaLs.cc  VarChaModel2GeoVaLs.h  VarChaModel2GeoVaLs.interface.F90  VarChaModel2GeoVaLs.interface.h  VarChaModel2GeoVaLsFortran.h
test/: CMakeLists.txt  compare.sh  cp_file.sh
test/Data/ioda_obs/3d_var_test/: 3d_var_test.py  nwm_osse_ioda_pct_oev_05.nc  nwm_osse_ioda_pct_oev_10.nc  nwm_osse_ioda_pct_oev_20.nc  nwm_osse_ioda_pct_oev_40.nc  nwm_osse_ioda_pct_oev_80.nc
test/Data/letkf_obs/: ctest_letkf_oi_depth_out.nc  ctest_letkf_oi_swe_out.nc
test/Data/wrf_hydro_nwm_files/: .gitattributes  HYDRO_RST.2017-01-01_00:00_DOMAIN1  RESTART.2017010100_DOMAIN1  RESTART.2017010100_DOMAIN1_mem001  RESTART.2017010100_DOMAIN1_mem002  RESTART.2017010100_sneqv_plus5_DOMAIN1  RESTART.2019040100_DOMAIN1_BULK  geometry_nwm_long_range_snow.nc  makeobs_3dvar_0000.nc  mk_perturb_restart.py  nwm_osse_ioda.nc  wrfinput.nc
test/executables/: TestErrorCovariance.cc  TestGeometry.cc  TestGeometryIterator.cc  TestIncrement.cc  TestLinearModel.cc  TestModel.cc  TestModelAuxControl.cc  TestModelAuxCovariance.cc  TestModelAuxIncrement.cc  TestState.cc
test/testinput/: 3dvar.yaml  dirac.yaml  error_covariance.yaml  geometry.yaml  geometry_iterator.yaml  hofx3d.yaml  hofx_nomodel.yaml  hofx_nomodel_3d.yaml  increment.yaml  interface.yml  letkf.yaml  letkf_oi.yaml  linear_model.yaml  make_obs.yaml  make_obs_3d.yaml  makeobs.yaml  model.yaml  model_aux_control.yaml  model_aux_covariance.yaml  refactor_yamls.sh  state.yaml  state_bulk.yaml  staticb.yaml
test/testinput/YAML_UPGRADE/: 3dvar.yaml  hofx3d.yaml  model_aux_control.yaml  state_bulk.yaml
test/testoutput/: 3dvar.ref  dirac.ref  hofx3d_identity.ref  hofx_nomodel_identity.ref  make_obs_3d.ref  staticb.ref
